--- a/GmailNotifier/GmailNotifier.csproj
+++ b/GmailNotifier/GmailNotifier.csproj
@@ -38,6 +38,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountManager.cs" />
+    <Compile Include="AddEditAccountForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddEditAccountForm.Designer.cs">
+      <DependentUpon>AddEditAccountForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MailForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -48,8 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="error.ico" />
@@ -57,6 +66,9 @@
     <Content Include="unread.ico" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AddEditAccountForm.resx">
+      <DependentUpon>AddEditAccountForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OptionsForm.resx">
       <DependentUpon>OptionsForm.cs</DependentUpon>
     </EmbeddedResource>
