--- a/GmailNotifier/GmailNotifier.csproj
+++ b/GmailNotifier/GmailNotifier.csproj
@@ -80,15 +80,15 @@
     <Compile Include="UpdateScheduler.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="HtmlRenderer">
+      <HintPath>..\HtmlRenderer.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Drawing.Html">
-      <HintPath>..\System.Drawing.Html.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
