--- a/GmailNotifier/GmailNotifier.csproj
+++ b/GmailNotifier/GmailNotifier.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Inbox.cs" />
     <Compile Include="NotificationManager.cs" />
     <Compile Include="NotifiedEmails.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
